--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v2
       
     - name: Install ARM toolchain
-      run: sudo apt-get install gcc-arm-none-eabi binutils-arm-none-eabi 
+      run: sudo apt-get install gcc-arm-none-eabi binutils-arm-none-eabi libnewlib-arm-none-eabi
 
     - name: Build Project
       shell: bash
