--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,10 +19,15 @@ jobs:
       
     - name: Install ARM toolchain
       run: sudo apt-get install gcc-arm-none-eabi binutils-arm-none-eabi libnewlib-arm-none-eabi
+      
+    - name: List directories
+      run: |
+        ls -lah
+        ls -lah Build/
 
     - name: Build Project
       shell: bash
-      working-directory: ${{runner.workspace}}/Build
+      working-directory: ./Build
       run: make -j4
 
 
