--- a/.github/workflows/devskim-analysis.yml
+++ b/.github/workflows/devskim-analysis.yml
@@ -14,7 +14,11 @@ on:
 jobs:
   lint:
     name: DevSkim
-    runs-on: ubuntu-20.04
+    
+    strategy:
+      fail-fast: false
+    
+    runs-on: ubuntu-latest
     permissions:
       actions: read
       contents: read
@@ -25,6 +29,12 @@ jobs:
 
       - name: Run DevSkim scanner
         uses: microsoft/DevSkim-Action@v1
+        with:
+          # The sub directory of the repository root to scan. Repository root used by default.
+          # Optionally scan the contents of archives.
+          should-scan-archives: true
+          # The filename for the output.
+          output-filename: devskim-results.sarif
         
       - name: Upload DevSkim scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v1
