--- a/.github/workflows/devskim-analysis.yml
+++ b/.github/workflows/devskim-analysis.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           # The sub directory of the repository root to scan. Repository root used by default.
           # Optionally scan the contents of archives.
-          should-scan-archives: true
+          should-scan-archives: false
           # The filename for the output.
           output-filename: devskim-results.sarif
         
