--- a/.github/workflows/clang-tidy-report.yml
+++ b/.github/workflows/clang-tidy-report.yml
@@ -25,12 +25,19 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Install ARM toolchain
-      run: sudo apt-get install gcc-arm-none-eabi binutils-arm-none-eabi libnewlib-arm-none-eabi
+      run: |
+        sudo apt-get update
+        sudo apt-get install gcc-arm-none-eabi binutils-arm-none-eabi libnewlib-arm-none-eabi
       
     - name: Install clang-tidy
       run: |
-        sudo apt-get update
         sudo apt-get install -y clang-tidy
+      
+    - name: Print info
+      run: |
+        arm-none-eabi-gcc -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -print-sysroot
+        arm-none-eabi-gcc -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -print-multi-directory
+        arm-none-eabi-gcc -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -print-libgcc-file-name
         
     - name: Analyze
       shell: bash
