--- a/.github/workflows/clang-tidy-report.yml
+++ b/.github/workflows/clang-tidy-report.yml
@@ -35,6 +35,7 @@ jobs:
       
     - name: Print info
       run: |
+        arm-none-eabi-gcc -v
         arm-none-eabi-gcc -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -print-sysroot
         arm-none-eabi-gcc -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -print-multi-directory
         arm-none-eabi-gcc -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -print-libgcc-file-name
