--- a/.github/workflows/clang-tidy-report.yml
+++ b/.github/workflows/clang-tidy-report.yml
@@ -29,10 +29,14 @@ jobs:
         sudo apt-get update
         sudo apt-get install gcc-arm-none-eabi binutils-arm-none-eabi libnewlib-arm-none-eabi
       
+    - name : List arm-gcc
+      run: |
+        ls -R /usr/lib/gcc/arm-none-eabi/9.2.1/
+      
     - name: Install clang-tidy
       run: |
         sudo apt-get install -y clang-tidy
-      
+    
     - name: Print info
       run: |
         arm-none-eabi-gcc -v
