--- a/.github/workflows/clang-tidy-report.yml
+++ b/.github/workflows/clang-tidy-report.yml
@@ -27,11 +27,15 @@ jobs:
     - name: Install ARM toolchain
       run: |
         sudo apt-get update
-        sudo apt-get install gcc-arm-none-eabi binutils-arm-none-eabi libnewlib-arm-none-eabi
+        sudo apt-get install -y gcc-arm-none-eabi binutils-arm-none-eabi libnewlib-arm-none-eabi
       
-    - name : List arm-gcc
+    - name : List usr
       run: |
-        ls -R /usr/lib/gcc/arm-none-eabi/9.2.1/
+        ls -R /usr/
+    
+    - name : List arm-gcc-lib
+      run: |
+        ls -R /usr/lib/gcc/arm-none-eabi/
       
     - name: Install clang-tidy
       run: |
