--- a/.github/workflows/clang-tidy-report.yml
+++ b/.github/workflows/clang-tidy-report.yml
@@ -28,9 +28,12 @@ jobs:
       run: |
         sudo apt-get update -y
         sudo apt-get install -y curl
+        echo "Downloading toolchain..."
         curl -o /tmp/arm-gcc-install.tar.bz2 https://armkeil.blob.core.windows.net/developer/Files/downloads/gnu-rm/10.3-2021.10/gcc-arm-none-eabi-10.3-2021.10-x86_64-linux.tar.bz2
+        echo "Unpacking toolchain"
         sudo tar -xjf /tmp/arm-gcc-install.tar.bz2 -C /usr/share/
-        sudo ln -s /usr/share/gcc-arm-none-eabi-10.3-2021.10/bin/arm-none-eabi-gcc/bin/* /usr/bin/
+        echo "Creating symlinks"
+        sudo ln -s /usr/share/gcc-arm-none-eabi-10.3-2021.10/bin/* /usr/bin/
         sudo apt install libncurses5
       
     - name: Install clang-tidy
