--- a/.github/workflows/clang-tidy-report.yml
+++ b/.github/workflows/clang-tidy-report.yml
@@ -40,6 +40,9 @@ jobs:
     - name: Install clang-tidy
       run: |
         sudo apt-get install -y clang-tidy
+        
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
 
     - name: Analyze
       shell: bash
