--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -67,6 +67,7 @@ jobs:
       run: sudo apt-get install gcc-arm-none-eabi binutils-arm-none-eabi libnewlib-arm-none-eabi
     
     - run: |
+       cd ./Build
        make -j2
 
     - name: Perform CodeQL Analysis
