--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -1,5 +1,7 @@
 # Action from: https://github.com/marketplace/actions/clang-format-check
 
+name: clang-format
+
 # Controls when the workflow will run
 on:
   push:
@@ -16,7 +18,7 @@ on:
 
 jobs:
   formatting-check:
-    name: Formatting Check
+    name: Check
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
