--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -66,10 +66,10 @@ jobs:
     # ✏️ If the Autobuild fails above, remove it and uncomment the following three lines
     #    and modify them (or add more) to build your code if your project
     #    uses a compiled language
-      - name: Build using CMake
-        run: |
-        cmake -B build -DCMAKE_BUILD_TYPE=Develop -DCMAKE_TOOLCHAIN_FILE=/Toolchain.cmake -G Ninja
-        cmake --build build/ -- ECU.elf
+
+    - run: |
+      cmake -B build -DCMAKE_BUILD_TYPE=Develop -DCMAKE_TOOLCHAIN_FILE=/Toolchain.cmake -G Ninja
+      cmake --build build/ -- ECU.elf
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
