--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -68,7 +68,9 @@ jobs:
     #    uses a compiled language
 
     - name: Build Project
-      run: make -j2
+      run: |
+      cmake -B build -DCMAKE_TOOLCHAIN_FILE=Toolchain.cmake -G Ninja
+      cmake --build build/ -- ECU.elf
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
